packages/block-library/src/section/editor.scss
/**
 * Section: All Alignment Settings
 */
.wp-block[data-type="core/section"] {
	// Only applied when background is added to cancel out padding
	> .editor-block-list__block-edit > div > .wp-block-section.has-background > .editor-inner-blocks {
		margin-top: -#{$block-padding*2 + $block-spacing};
		margin-bottom: -#{$block-padding*2 + $block-spacing};
	}

	// Full Width Blocks
	// specificity required to only target immediate child Blocks of Section
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align="full"] {
		margin-left: auto;
		margin-right: auto;
		padding-left: $block-padding*2;
		padding-right: $block-padding*2;

		@include break-small() {
			padding-left: $block-padding*4 + $block-spacing/2; // 58px
			padding-right: $block-padding*4 + $block-spacing/2; // 58px
		}
	}
}

/**
 * Section: Full Width Alignment
 */
.wp-block[data-type="core/section"][data-align="full"] {

	margin-left: -#{$block-container-side-padding - $border-width};
	margin-right: -#{$block-container-side-padding - $border-width};

	// First tier of InnerBlocks must act like the container of the standard canvas
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks {
		margin-left: auto;
		margin-right: auto;
		padding-left: $block-padding*3 + $block-spacing + $border-width;
		padding-right: $block-padding*3 + $block-spacing + $border-width;
	}

	// Full Width Blocks
	// specificity required to only target immediate child Blocks of Section
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align="full"] {

		// we "pull" full width blocks out a little further when within a full width section
		padding-right: 0;
		padding-left: 0;
		width: calc(100% + #{$block-padding*6 + $block-spacing*2 + $border-width*2});
		left: -#{$block-padding*3 + $block-spacing + $border-width};
		max-width: none;

		// Allow to abutt the edges of the canvas
		> .editor-block-list__block-edit {
			margin-left: 0;
			margin-right: 0;
		}
	}
}

